--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     </header>
 
     <section id="home">
-        <img src="image/mustafamuratcoskun-300x300.jpg" alt="...">
+        <img src="images/mustafamuratcoskun-300x300.jpg" alt="...">
 
-        <div class="name">
+        <div class="name text-center">
             <h2 class="heading-big">Furkan Baka</h2>
-            <p>Computer Engineer</p>
+            <p>Computer Engineer | Bilgisayar Mühendisliği</p>
 
         </div>
 
-        <a href="#courses">Kurslara Git</a>
+        <a href="#courses" class="btn btn-primary">Kurslara Git</a>
     </section>
 
 </body>
