--- a/index.html
+++ b/index.html
@@ -52,5 +52,37 @@
         <a href="#courses" class="btn btn-primary">Kurslara Git</a>
     </section>
 
+    <section id="training" class="bd-dark-blue">
+
+        <h3 class="text-center heading-medium">Eğitimler</h3>
+        <div class="items">
+
+            <article class="item">
+                <i class="fa fa-pencil-alt"></i>
+                <h3>Sınıf İçi Eğitimler</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, expedita!
+                </p>
+            </article>
+
+            <article class="item">
+                <i class="fa fa-pencil-alt"></i>
+                <h3>Sınıf İçi Eğitimler</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, expedita!
+                </p>
+            </article>
+
+            <article class="item">
+                <i class="fa fa-pencil-alt"></i>
+                <h3>Sınıf İçi Eğitimler</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, expedita!
+                </p>
+            </article>
+
+        </div>
+
+    </section>
 </body>
 </html>
